--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 		<title> Container of cats </title>
 	</head>
 	<body>
-		<center><h1> IF IT FITS, I SITS (.... in a container.... in a container) </h1></center>
-		<center><h1> IF IT FITS, I SITS (.... in a container.... in a container) </h1></center>
+		<center><h1> Does this CI/CD pipeline work? </h1></center>
+		
 		
 		<section id="photos">
 			<img src="containerandcat1.jpg" alt="container and a cat">
