--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<center><h1> One more time! </h1></center>
 		<br>
 		<br>
-		<center><h1> Jiaru is a pig pig </h1></center>
+		<center><h1> All Good </h1></center>
+		<center><h1> And... </h1></center>
+		<center><h1> Welcome...</h1></center>
 		
 		
 		<section id="photos">
